--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ div {
     background-image: url("../imgs/pickyourown.jpg");
 }
 .localWares {
-    background-image: url("../imgs/localWares.jpg");
+    background-image: url("../imgs/localwares.jpg");
 }
 .footer {
     background-color: black;
