--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,17 @@ div {
     height: 46px;
     padding: 0px;
 }
+@media all and (max-width: 735px) {
+    .maps {
+        width: 288px;
+        height: 151px;
+    }
+}
+@media all and (max-width: 624px) {
+    .maps {
+        float: left;
+    }
+}
 @media all and (max-width: 600px) {
     .imgSplitContent {
         height: 45vh;
