--- a/css/styles.css
+++ b/css/styles.css
@@ -4,20 +4,56 @@ body {
     background-image: url("../imgs/graybackground.jpg");
     background-repeat: repeat;
 }
-.sideNav {
-    position: fixed;
-    background: black;
-    top: 50%;
-    transform: translate(0%, -50%);
-}
-.sideNav ul {
+.mainContentWrapper {
+    display: table-cell;
+    vertical-align: middle;
     height: 100%;
-    margin: 0;
-    padding: 0;
+    width: 100%;
 }
-.sideNav ul li {
-    height: 28px;
-    width: 28px;
+.textOverlay {
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    margin: 0 auto;
+    display: inline-block;
+    padding: 20px;
+    padding-right: 10%;
+    padding-left: 10%;
+}
+.textOverlay h1 {
+    margin-top: 0;
+}
+.navCollapse {
+  animation: collapse .5s ease forwards;
+}
+.navOpen {
+  animation: open .5s ease forwards;
+}
+@keyframes collapse {
+    from {
+        opacity: 1;
+        top: 0;
+    }
+    to {
+        opacity: 0;
+        top: -75px;
+    }
+}
+@keyframes open {
+    from {
+        opacity: 0;
+        top: -75px;
+    }
+    to {
+        opacity: 1;
+        top: 0;
+    }
+}
+.headerLogo {
+    background-image: url("../imgs/logo.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 144px;
+    height: 75px;
 }
 .title {
     margin: 0px;
@@ -36,6 +72,10 @@ div {
     width: 100%;
     background-position: center;
 }
+.mainContent {
+    height: 100vh;
+    display: table;
+}
 .splitContentWrapper {
     display: table;
 }
@@ -52,7 +92,7 @@ div {
     width: 40%;
 }
 .home {
-    background-image: url("../imgs/farmstand.jpg");
+    background-image: url("../imgs/farmstand2.png");
 }
 .pie {
     background-image: url("../imgs/pie.jpg");
@@ -104,6 +144,7 @@ div {
 .logoWrapper {
     float: left;
     margin: 5px;
+    margin-top:10vh;
 }
 .logo {
     background-image: url("../imgs/logo.png");
@@ -119,8 +160,9 @@ div {
     width: 400px;
     height: 320px;
     border: solid darkgray;
-    margin: 8px;
     padding: 0px;
+    margin: 8px;
+    margin-top:10vh;
 }
 .fb {
     border: none;
